--- a/sites/all/themes/gxnulib/sass/components/blocks/_block-list.scss
+++ b/sites/all/themes/gxnulib/sass/components/blocks/_block-list.scss
@@ -12,7 +12,7 @@ and open the template in the editor.
         padding: $vert-spacing-unit 0;
 
         a {
-            color: $grey;
+            color: $font-color;
         }
         
         .block__content {
@@ -39,7 +39,7 @@ and open the template in the editor.
         padding: $vert-spacing-unit 0;
 
         a {
-            color: $grey;
+            color: $font-color;
         }
         
         .block__content {
