--- a/sites/all/themes/gxnulib/sass/base/_typography.scss
+++ b/sites/all/themes/gxnulib/sass/base/_typography.scss
@@ -8,18 +8,20 @@
  */
 html {
     font-family: $ms-yh;
-    color: $grey;
+    color: $font-color;
 }
 
 /**
  * $LINKS
  */
 a {
-    @include link-colors($red, $light-red, $red, $dark-red, $red);
+    background: transparent;
+    @include link-colors($link-color, $link-hover-color $link-active-color, $link-visited-color, $link-focus-color);
     text-decoration: none;
-}
-a:hover {
-    text-decoration: underline;
+    
+    &:hover {
+        text-decoration: underline;
+    }
 }
 
 /**
@@ -32,7 +34,7 @@ h4, .delta,
 h5, .epsilon,
 h6, .zeta {
     @include rhythm(0, 0, 0, 0.2);
-    color: $red;
+    color: $header-color;
     text-transform: uppercase;
 
     a,
@@ -93,7 +95,6 @@ blockquote {
     @include rhythm-borders(1px);
     @include apply-side-rhythm-border(left, 10px);
     font-style: italic;
-    color: $dark-red;
     
     p {
         margin: 0;
@@ -110,9 +111,7 @@ q {
 mark, 
 .marker {
     padding: 0.1em 0.5em;
-    
-    background: $light-pink;
-    
+        
     color: $white;
     @include font-size(12px);
     text-transform: capitalize;
@@ -128,14 +127,14 @@ footer,
     padding: $vert-spacing-unit 0;
     margin: 0 auto;
     
-    background: $dark-grey;
+    background: darken($font-color, 50%);
     
     text-align: center;
-    color: $light-grey;
+    color: darken($font-color, 15%);
     @include font-size(12px);
     
     a {
-        color: $light-grey;
+        color: lighten($font-color, 15%);
     }
 }
 
@@ -143,18 +142,18 @@ footer,
  * $BARS
  */
 .l-bar {
-    padding: 0.1em 0.5em;
+    padding: $spacing $horz-spacing-unit;
     
-    background: $dark-grey;
+    background: $black;
     
     text-align: right;
-    color: $lighter-grey;
+    color: darken($font-color, 15%);
     @include font-size(12px);
     
     a {
-        color: $lighter-grey;
+        color: lighten($font-color, 15%);
         &:hover {
-            color: $silver;
+            color: lighten($font-color, 30%);
         }
     }
 }
@@ -165,15 +164,15 @@ footer,
 .l-useful-link {    
     text-align: center;
     @include font-size(12px);
-    color: $lighter-grey;
+    color: lighten($font-color, 15%);
     
     a {
-        color: $lighter-grey;
+        color: lighten($font-color, 15%);
         &:visited {
-            color: $lighter-grey;
+            color: lighten($font-color, 15%);
         }
         &:hover {
-            color: $silver;
+            color: lighten($font-color, 30%);
         }     
     }
 }
@@ -184,9 +183,9 @@ footer,
 .l-copyright {
     text-align: center;
     @include font-size(12px);
-    color: $light-grey;
+    color: lighten($font-color, 15%);
     
     a {
-        color: $light-grey;
+        color: lighten($font-color, 15%);
     }
 }
