--- a/sites/all/themes/gxnulib/sass/variables/_grid.scss
+++ b/sites/all/themes/gxnulib/sass/variables/_grid.scss
@@ -9,7 +9,7 @@ and open the template in the editor.
 */
 
 // Set consistent vertical and horizontal spacing units.
-$vert-spacing-unit: 20px;
+$vert-spacing-unit: 1.5em;
 $horz-spacing-unit: 1em;
 
 $tablet: 44em;
@@ -24,3 +24,4 @@ $desktop: 70em;
 @include sgs-change('debug', true);
 
 $radius: 4px;
+$spacing: 0.5em;
