--- a/sites/all/themes/gxnulib/sass/components/tabs/_search-tab.scss
+++ b/sites/all/themes/gxnulib/sass/components/tabs/_search-tab.scss
@@ -9,8 +9,8 @@ and open the template in the editor.
 */
 .block--quicktabs-search-tabs {
     .quicktabs_main {
-        padding: $vert-spacing-unit*2 $vert-spacing-unit;
-        background: $white;
+        padding: $vert-spacing-unit $horz-spacing-unit;
+        background: $tab-bgcolor;
         @include border-bottom-radius($radius);
         @include pie-clearfix;
         text-align: center;
@@ -38,13 +38,13 @@ and open the template in the editor.
         font-weight: bold;
 
         a {
-            color: $white;
+            color: $tab-menu-link-color;
         }
 
         li {
-            background: $red;
+            background: $tab-menu-link-bgcolor;
             margin: 0 auto;
-            padding: $vert-spacing-unit 0.5em;
+            padding: $vert-spacing-unit $spacing;
             width: (100% / 2);
             text-align: center;
             float: left;
@@ -53,7 +53,7 @@ and open the template in the editor.
             cursor: pointer;
 
             &:hover {
-                background: $dark-red;
+                background: $tab-menu-link-hover-bgcolor;
                 border-bottom: none;
             }
             &:first-child {
@@ -67,7 +67,7 @@ and open the template in the editor.
             }
 
             &.active {
-                background: $white;
+                background: $tab-bgcolor;
 
                 a {
                     color: $black;
