--- a/sites/all/themes/gxnulib/sass/variables/_grid.scss
+++ b/sites/all/themes/gxnulib/sass/variables/_grid.scss
@@ -21,7 +21,7 @@ $desktop: 70em;
 
 @include add-gutter(1/3);
 
-@include sgs-change('debug', true);
+@include sgs-change('debug', false);
 
 $radius: 4px;
 $spacing: 0.5em;
