修改搜索选项卡样式

--- a/sites/all/themes/gxnulib/css/layouts/sword-front/sword-front.layout.no-query.css
+++ b/sites/all/themes/gxnulib/css/layouts/sword-front/sword-front.layout.no-query.css
@@ -31,4 +31,8 @@ and open the template in the editor.
 .l-branding {
   padding: 1.5em 0; }
 
+/* line 35, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+.l-header {
+  background: rgba(142, 150, 160, 0.75); }
+
 /*# sourceMappingURL=sword-front.layout.no-query.css.map */
