--- a/sites/all/themes/gxnulib/sass/components/nodes/_node.scss
+++ b/sites/all/themes/gxnulib/sass/components/nodes/_node.scss
@@ -18,7 +18,7 @@ and open the template in the editor.
 }
 
 .node__content {
-    padding: $vert-spacing-unit 0.5em;
+    padding: $vert-spacing-unit $spacing;
     
     p {
         text-indent: 2em;
