--- a/sites/all/themes/gxnulib/sass/layouts/sword-front/sword-front.layout.scss
+++ b/sites/all/themes/gxnulib/sass/layouts/sword-front/sword-front.layout.scss
@@ -32,6 +32,10 @@
     padding: $vert-spacing-unit 0;
 }
 
+.l-header {
+    background: $heading-bgcolor;
+}
+
 @include breakpoint($desktop) {
     .l-branding {
         @include grid-span(8, 1);
