--- a/sites/all/themes/gxnulib/css/gxnulib.no-query.css
+++ b/sites/all/themes/gxnulib/css/gxnulib.no-query.css
@@ -66,7 +66,7 @@ audio:not([controls]) {
 /* line 1, ../sass/base/_forms.scss */
 input[type="text"],
 textarea {
-  padding: 0.5em;
+  padding: 0.5em 1em;
   border: 1px solid #737373;
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
@@ -76,36 +76,55 @@ textarea {
   -webkit-border-radius: 4px;
   border-radius: 4px;
   outline: none; }
-  /* line 9, ../sass/base/_forms.scss */
+  /* line 61, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/css3/_user-interface.scss */
+  input[type="text"]:-moz-placeholder,
+  textarea:-moz-placeholder {
+    font-style: italic; }
+  /* line 64, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/css3/_user-interface.scss */
+  input[type="text"]::-moz-placeholder,
+  textarea::-moz-placeholder {
+    font-style: italic; }
+  /* line 67, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/css3/_user-interface.scss */
+  input[type="text"]:-ms-input-placeholder,
+  textarea:-ms-input-placeholder {
+    font-style: italic; }
+  /* line 56, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/css3/_user-interface.scss */
+  input[type="text"]::-webkit-input-placeholder,
+  textarea::-webkit-input-placeholder {
+    font-style: italic; }
+  /* line 13, ../sass/base/_forms.scss */
   input[type="text"]:focus,
   textarea:focus {
     -moz-box-shadow: 0 0 6px rgba(115, 115, 115, 0.7);
     -webkit-box-shadow: 0 0 6px rgba(115, 115, 115, 0.7);
     box-shadow: 0 0 6px rgba(115, 115, 115, 0.7); }
 
-/* line 14, ../sass/base/_forms.scss */
+/* line 18, ../sass/base/_forms.scss */
 fieldset {
   margin-left: 0;
   margin-right: 0;
   padding: 0.75em 1em 1.5em 1em;
   border-color: #737373; }
 
-/* line 22, ../sass/base/_forms.scss */
+/* line 26, ../sass/base/_forms.scss */
 legend {
   padding: 0 0.5em;
   color: #333333; }
 
-/* line 28, ../sass/base/_forms.scss */
+/* line 32, ../sass/base/_forms.scss */
 input[type="submit"], input[type="button"] {
   background: #e87411;
-  padding: 0.5em;
-  border: none;
-  color: #ffffff; }
-  /* line 34, ../sass/base/_forms.scss */
+  padding: 0.5em 1em;
+  border: 1px solid #737373;
+  color: #ffffff;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px; }
+  /* line 39, ../sass/base/_forms.scss */
   input[type="submit"]:hover, input[type="button"]:hover {
-    background: #a1500c; }
+    background: #d0680f; }
 
-/* line 39, ../sass/base/_forms.scss */
+/* line 44, ../sass/base/_forms.scss */
 input[type="checkbox"], input[type="radio"] {
   padding: 1.5em 0.5em; }
 
@@ -114,7 +133,7 @@ ul li {
   list-style-image: none;
   list-style-type: none;
   margin-left: 0;
-  padding: .5em;
+  padding: 0.5em;
   margin: 0 auto; }
 
 /* line 1, ../sass/base/_media.scss */
@@ -540,7 +559,7 @@ and open the template in the editor.
     .breadcrumb li:after {
       font-family: "FontAwesome";
       content: "\f101";
-      padding-left: .5em;
+      padding-left: 0.5em;
       vertical-align: baseline; }
     /* line 22, ../sass/components/menus/_breadcrumb.scss */
     .breadcrumb li:last-child:after {
@@ -725,14 +744,13 @@ and open the template in the editor.
 */
 /* line 11, ../sass/components/tabs/_news-tab.scss */
 .block--quicktabs-news-tabs > .block__content {
-  border: 1px solid #877d60;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px; }
   /* line 12, ../sass/components/tabs/_news-tab.scss */
   .block--quicktabs-news-tabs > .block__content .block {
     padding: 0; }
-/* line 19, ../sass/components/tabs/_news-tab.scss */
+/* line 18, ../sass/components/tabs/_news-tab.scss */
 .block--quicktabs-news-tabs .quicktabs_main {
   padding: 0.5em;
   background: #efede8;
@@ -742,19 +760,19 @@ and open the template in the editor.
     content: "";
     display: table;
     clear: both; }
-  /* line 24, ../sass/components/tabs/_news-tab.scss */
+  /* line 23, ../sass/components/tabs/_news-tab.scss */
   .block--quicktabs-news-tabs .quicktabs_main a {
     color: #333333; }
-    /* line 26, ../sass/components/tabs/_news-tab.scss */
+    /* line 25, ../sass/components/tabs/_news-tab.scss */
     .block--quicktabs-news-tabs .quicktabs_main a:hover {
       color: #e87411; }
-  /* line 31, ../sass/components/tabs/_news-tab.scss */
+  /* line 30, ../sass/components/tabs/_news-tab.scss */
   .block--quicktabs-news-tabs .quicktabs_main ul {
     padding: 0.5em; }
-    /* line 33, ../sass/components/tabs/_news-tab.scss */
+    /* line 32, ../sass/components/tabs/_news-tab.scss */
     .block--quicktabs-news-tabs .quicktabs_main ul li {
       padding: 0.5em 0; }
-      /* line 35, ../sass/components/tabs/_news-tab.scss */
+      /* line 34, ../sass/components/tabs/_news-tab.scss */
       .block--quicktabs-news-tabs .quicktabs_main ul li:before {
         font-family: "FontAwesome";
         content: "\f0da";
@@ -762,7 +780,7 @@ and open the template in the editor.
         font-size: 10px;
         font-size: 0.71429rem;
         color: #e87411; }
-/* line 46, ../sass/components/tabs/_news-tab.scss */
+/* line 45, ../sass/components/tabs/_news-tab.scss */
 .block--quicktabs-news-tabs ul.quicktabs-tabs {
   padding: 0;
   margin: 0;
@@ -773,10 +791,10 @@ and open the template in the editor.
     content: "";
     display: table;
     clear: both; }
-  /* line 53, ../sass/components/tabs/_news-tab.scss */
+  /* line 52, ../sass/components/tabs/_news-tab.scss */
   .block--quicktabs-news-tabs ul.quicktabs-tabs a {
     color: #333333; }
-  /* line 57, ../sass/components/tabs/_news-tab.scss */
+  /* line 56, ../sass/components/tabs/_news-tab.scss */
   .block--quicktabs-news-tabs ul.quicktabs-tabs li {
     background: #494f57;
     margin: 0 auto;
@@ -795,28 +813,28 @@ and open the template in the editor.
       content: "";
       display: table;
       clear: both; }
-    /* line 67, ../sass/components/tabs/_news-tab.scss */
+    /* line 66, ../sass/components/tabs/_news-tab.scss */
     .block--quicktabs-news-tabs ul.quicktabs-tabs li:hover {
       background: #606873;
       border-bottom: none; }
-    /* line 71, ../sass/components/tabs/_news-tab.scss */
+    /* line 70, ../sass/components/tabs/_news-tab.scss */
     .block--quicktabs-news-tabs ul.quicktabs-tabs li:first-child {
       -moz-border-radius-topleft: 4px;
       -webkit-border-top-left-radius: 4px;
       border-top-left-radius: 4px; }
-    /* line 74, ../sass/components/tabs/_news-tab.scss */
+    /* line 73, ../sass/components/tabs/_news-tab.scss */
     .block--quicktabs-news-tabs ul.quicktabs-tabs li:last-child {
       -moz-border-radius-topright: 4px;
       -webkit-border-top-right-radius: 4px;
       border-top-right-radius: 4px; }
-      /* line 76, ../sass/components/tabs/_news-tab.scss */
+      /* line 75, ../sass/components/tabs/_news-tab.scss */
       .block--quicktabs-news-tabs ul.quicktabs-tabs li:last-child a {
         border-right: none; }
-    /* line 81, ../sass/components/tabs/_news-tab.scss */
+    /* line 80, ../sass/components/tabs/_news-tab.scss */
     .block--quicktabs-news-tabs ul.quicktabs-tabs li.active {
       background: #efede8;
       border-top: 3px solid #e87411; }
-    /* line 86, ../sass/components/tabs/_news-tab.scss */
+    /* line 85, ../sass/components/tabs/_news-tab.scss */
     .block--quicktabs-news-tabs ul.quicktabs-tabs li a {
       border-right: 1px solid #877d60; }
 
@@ -830,55 +848,6 @@ and open the template in the editor.
     Author     : Stephen
 */
 /* line 11, ../sass/components/tabs/_search-tab.scss */
-.block--quicktabs-search-tabs .quicktabs_main {
-  padding: 1.5em 1em;
-  background: #efede8;
-  -moz-border-radius-bottomleft: 4px;
-  -webkit-border-bottom-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-  -moz-border-radius-bottomright: 4px;
-  -webkit-border-bottom-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  *zoom: 1;
-  text-align: center; }
-  /* line 38, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/utilities/general/_clearfix.scss */
-  .block--quicktabs-search-tabs .quicktabs_main:after {
-    content: "";
-    display: table;
-    clear: both; }
-  /* line 18, ../sass/components/tabs/_search-tab.scss */
-  .block--quicktabs-search-tabs .quicktabs_main input[type="text"] {
-    width: 85%;
-    height: 3em;
-    -moz-border-radius-topright: 0;
-    -webkit-border-top-right-radius: 0;
-    border-top-right-radius: 0;
-    -moz-border-radius-bottomright: 0;
-    -webkit-border-bottom-right-radius: 0;
-    border-bottom-right-radius: 0; }
-    /* line 61, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/css3/_user-interface.scss */
-    .block--quicktabs-search-tabs .quicktabs_main input[type="text"]:-moz-placeholder {
-      font-style: italic; }
-    /* line 64, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/css3/_user-interface.scss */
-    .block--quicktabs-search-tabs .quicktabs_main input[type="text"]::-moz-placeholder {
-      font-style: italic; }
-    /* line 67, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/css3/_user-interface.scss */
-    .block--quicktabs-search-tabs .quicktabs_main input[type="text"]:-ms-input-placeholder {
-      font-style: italic; }
-    /* line 56, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/css3/_user-interface.scss */
-    .block--quicktabs-search-tabs .quicktabs_main input[type="text"]::-webkit-input-placeholder {
-      font-style: italic; }
-  /* line 26, ../sass/components/tabs/_search-tab.scss */
-  .block--quicktabs-search-tabs .quicktabs_main input[type="submit"] {
-    width: 15%;
-    height: 3em;
-    -moz-border-radius-topleft: 0;
-    -webkit-border-top-left-radius: 0;
-    border-top-left-radius: 0;
-    -moz-border-radius-bottomleft: 0;
-    -webkit-border-bottom-left-radius: 0;
-    border-bottom-left-radius: 0; }
-/* line 33, ../sass/components/tabs/_search-tab.scss */
 .block--quicktabs-search-tabs ul.quicktabs-tabs {
   padding: 0;
   margin: 0;
@@ -889,14 +858,14 @@ and open the template in the editor.
     content: "";
     display: table;
     clear: both; }
-  /* line 40, ../sass/components/tabs/_search-tab.scss */
+  /* line 18, ../sass/components/tabs/_search-tab.scss */
   .block--quicktabs-search-tabs ul.quicktabs-tabs a {
     color: #ffffff; }
-  /* line 44, ../sass/components/tabs/_search-tab.scss */
+  /* line 22, ../sass/components/tabs/_search-tab.scss */
   .block--quicktabs-search-tabs ul.quicktabs-tabs li {
     background: #494f57;
     margin: 0 auto;
-    padding: 1.5em 0.5em;
+    padding: 0.5em;
     width: 50%;
     text-align: center;
     float: left;
@@ -912,28 +881,69 @@ and open the template in the editor.
       content: "";
       display: table;
       clear: both; }
-    /* line 55, ../sass/components/tabs/_search-tab.scss */
+    /* line 33, ../sass/components/tabs/_search-tab.scss */
     .block--quicktabs-search-tabs ul.quicktabs-tabs li:hover {
       background: #606873;
       border-bottom: none; }
-    /* line 59, ../sass/components/tabs/_search-tab.scss */
+    /* line 37, ../sass/components/tabs/_search-tab.scss */
     .block--quicktabs-search-tabs ul.quicktabs-tabs li:first-child {
       -moz-border-radius-topleft: 4px;
       -webkit-border-top-left-radius: 4px;
       border-top-left-radius: 4px; }
-    /* line 62, ../sass/components/tabs/_search-tab.scss */
+    /* line 40, ../sass/components/tabs/_search-tab.scss */
     .block--quicktabs-search-tabs ul.quicktabs-tabs li:last-child {
       -moz-border-radius-topright: 4px;
       -webkit-border-top-right-radius: 4px;
       border-top-right-radius: 4px; }
-      /* line 64, ../sass/components/tabs/_search-tab.scss */
+      /* line 42, ../sass/components/tabs/_search-tab.scss */
       .block--quicktabs-search-tabs ul.quicktabs-tabs li:last-child a {
         border-right: none; }
-    /* line 69, ../sass/components/tabs/_search-tab.scss */
+    /* line 47, ../sass/components/tabs/_search-tab.scss */
     .block--quicktabs-search-tabs ul.quicktabs-tabs li.active {
       background: #efede8; }
-      /* line 72, ../sass/components/tabs/_search-tab.scss */
+      /* line 50, ../sass/components/tabs/_search-tab.scss */
       .block--quicktabs-search-tabs ul.quicktabs-tabs li.active a {
         color: #000000; }
+/* line 57, ../sass/components/tabs/_search-tab.scss */
+.block--quicktabs-search-tabs .quicktabs_main {
+  padding: 1.5em;
+  background: #efede8;
+  -moz-border-radius-bottomleft: 4px;
+  -webkit-border-bottom-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  -moz-border-radius-bottomright: 4px;
+  -webkit-border-bottom-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  *zoom: 1;
+  text-align: center; }
+  /* line 38, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/utilities/general/_clearfix.scss */
+  .block--quicktabs-search-tabs .quicktabs_main:after {
+    content: "";
+    display: table;
+    clear: both; }
+  /* line 64, ../sass/components/tabs/_search-tab.scss */
+  .block--quicktabs-search-tabs .quicktabs_main input[type="text"] {
+    width: 85%;
+    height: 3.5em;
+    margin-top: 1.71429em;
+    margin-bottom: 1.71429em;
+    -moz-border-radius-topright: 0;
+    -webkit-border-top-right-radius: 0;
+    border-top-right-radius: 0;
+    -moz-border-radius-bottomright: 0;
+    -webkit-border-bottom-right-radius: 0;
+    border-bottom-right-radius: 0; }
+  /* line 70, ../sass/components/tabs/_search-tab.scss */
+  .block--quicktabs-search-tabs .quicktabs_main input[type="submit"] {
+    width: 15%;
+    height: 3.5em;
+    margin-top: 1.71429em;
+    margin-bottom: 1.71429em;
+    -moz-border-radius-topleft: 0;
+    -webkit-border-top-left-radius: 0;
+    border-top-left-radius: 0;
+    -moz-border-radius-bottomleft: 0;
+    -webkit-border-bottom-left-radius: 0;
+    border-bottom-left-radius: 0; }
 
 /*# sourceMappingURL=gxnulib.no-query.css.map */
