--- a/sites/all/themes/gxnulib/css/layouts/sword-front/sword-front.layout.css
+++ b/sites/all/themes/gxnulib/css/layouts/sword-front/sword-front.layout.css
@@ -31,8 +31,12 @@ and open the template in the editor.
 .l-branding {
   padding: 1.5em 0; }
 
+/* line 35, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+.l-header {
+  background: rgba(142, 150, 160, 0.75); }
+
 @media (min-width: 70em) {
-  /* line 36, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+  /* line 40, ../../../sass/layouts/sword-front/sword-front.layout.scss */
   .l-branding {
     width: 49.20635%;
     float: left;
@@ -40,7 +44,7 @@ and open the template in the editor.
     margin-left: 0;
     clear: none; }
 
-  /* line 40, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+  /* line 44, ../../../sass/layouts/sword-front/sword-front.layout.scss */
   .l-region--navigation {
     width: 49.20635%;
     float: right;
@@ -48,7 +52,7 @@ and open the template in the editor.
     margin-right: 0;
     clear: none; }
 
-  /* line 44, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+  /* line 48, ../../../sass/layouts/sword-front/sword-front.layout.scss */
   .l-region--search-tab {
     width: 74.60317%;
     float: left;
@@ -56,7 +60,7 @@ and open the template in the editor.
     margin-left: 0;
     clear: none; }
 
-  /* line 48, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+  /* line 52, ../../../sass/layouts/sword-front/sword-front.layout.scss */
   .l-region--showcase {
     width: 23.80952%;
     float: right;
@@ -64,7 +68,7 @@ and open the template in the editor.
     margin-right: 0;
     clear: none; }
 
-  /* line 52, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+  /* line 56, ../../../sass/layouts/sword-front/sword-front.layout.scss */
   .l-region--stacked-first {
     width: 74.60317%;
     float: left;
@@ -72,7 +76,7 @@ and open the template in the editor.
     margin-left: 0;
     clear: none; }
 
-  /* line 56, ../../../sass/layouts/sword-front/sword-front.layout.scss */
+  /* line 60, ../../../sass/layouts/sword-front/sword-front.layout.scss */
   .l-region--stacked-second {
     width: 23.80952%;
     float: right;
