--- a/sites/all/themes/gxnulib/css/gxnulib.styles.css
+++ b/sites/all/themes/gxnulib/css/gxnulib.styles.css
@@ -167,21 +167,40 @@ a {
   text-decoration: none; }
   /* line 18, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/typography/links/_link-colors.scss */
   a:visited {
+    color: #e87411; }
+  /* line 21, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/typography/links/_link-colors.scss */
+  a:focus {
     color: #a1500c; }
   /* line 24, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/typography/links/_link-colors.scss */
   a:hover {
-    color: #a1500c #a1500c; }
+    color: #a1500c; }
   /* line 27, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/typography/links/_link-colors.scss */
   a:active {
-    color: #e87411; }
+    color: #a1500c; }
   /* line 23, ../sass/base/_typography.scss */
   a:hover {
     text-decoration: underline; }
 
+/* line 29, ../sass/base/_typography.scss */
+.front-page a {
+  color: #333333; }
+  /* line 18, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/typography/links/_link-colors.scss */
+  .front-page a:visited {
+    color: #333333; }
+  /* line 21, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/typography/links/_link-colors.scss */
+  .front-page a:focus {
+    color: #333333; }
+  /* line 24, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/typography/links/_link-colors.scss */
+  .front-page a:hover {
+    color: #e87411; }
+  /* line 27, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-core-1.0.3/stylesheets/compass/typography/links/_link-colors.scss */
+  .front-page a:active {
+    color: #e87411; }
+
 /**
  * $HEADINGS
  */
-/* line 31, ../sass/base/_typography.scss */
+/* line 37, ../sass/base/_typography.scss */
 h1, .alpha,
 h2, .beta, .article-title,
 h3, .gamma,
@@ -194,7 +213,7 @@ h6, .zeta {
   margin-bottom: 0.34286em;
   color: #e87411;
   text-transform: uppercase; }
-  /* line 41, ../sass/base/_typography.scss */
+  /* line 47, ../sass/base/_typography.scss */
   h1 a,
   h1 a:visited, .alpha a,
   .alpha a:visited,
@@ -221,39 +240,39 @@ h6, .zeta {
     color: inherit;
     text-decoration: none; }
 
-/* line 48, ../sass/base/_typography.scss */
+/* line 54, ../sass/base/_typography.scss */
 h1, .alpha {
   font-size: 54px;
   font-size: 3.85714rem;
   font-weight: 700;
   line-height: 80px; }
 
-/* line 53, ../sass/base/_typography.scss */
+/* line 59, ../sass/base/_typography.scss */
 h2, .beta, .article-title {
   font-size: 34px;
   font-size: 2.42857rem;
   font-weight: 700;
   line-height: 54px; }
 
-/* line 58, ../sass/base/_typography.scss */
+/* line 64, ../sass/base/_typography.scss */
 h3, .gamma {
   font-size: 22px;
   font-size: 1.57143rem;
   line-height: 40px; }
 
-/* line 62, ../sass/base/_typography.scss */
+/* line 68, ../sass/base/_typography.scss */
 h4, .delta, legend, .block__title, .block--quicktabs-news-tabs ul.quicktabs-tabs, .block--quicktabs-search-tabs ul.quicktabs-tabs {
   font-size: 18px;
   font-size: 1.28571rem;
   line-height: 32px; }
 
-/* line 66, ../sass/base/_typography.scss */
+/* line 72, ../sass/base/_typography.scss */
 h5, .epsilon {
   font-size: 16px;
   font-size: 1.14286rem;
   line-height: 26px; }
 
-/* line 70, ../sass/base/_typography.scss */
+/* line 76, ../sass/base/_typography.scss */
 h6, .zeta {
   font-size: 16px;
   font-size: 1.14286rem;
@@ -262,7 +281,7 @@ h6, .zeta {
 /**
  * $PARAGRAPHS
  */
-/* line 78, ../sass/base/_typography.scss */
+/* line 84, ../sass/base/_typography.scss */
 p,
 blockquote {
   margin: 0;
@@ -271,7 +290,7 @@ blockquote {
   padding-bottom: 0em;
   margin-bottom: 1.71429em; }
 
-/* line 83, ../sass/base/_typography.scss */
+/* line 89, ../sass/base/_typography.scss */
 p + img {
   float: left;
   margin-right: 1em; }
@@ -279,7 +298,7 @@ p + img {
 /**
  * $QUOTES
  */
-/* line 91, ../sass/base/_typography.scss */
+/* line 97, ../sass/base/_typography.scss */
 blockquote {
   margin-top: 0em;
   padding-top: 1.71429em;
@@ -293,18 +312,18 @@ blockquote {
   border-left-style: solid;
   padding-left: 1em;
   font-style: italic; }
-  /* line 100, ../sass/base/_typography.scss */
+  /* line 106, ../sass/base/_typography.scss */
   blockquote p {
     margin: 0; }
 
-/* line 105, ../sass/base/_typography.scss */
+/* line 111, ../sass/base/_typography.scss */
 q {
   font-style: italic; }
 
 /**
  * $MARKS
  */
-/* line 112, ../sass/base/_typography.scss */
+/* line 118, ../sass/base/_typography.scss */
 mark,
 .marker {
   padding: 0.1em 0.5em;
@@ -319,7 +338,7 @@ mark,
 /**
  * $FOOTERS
  */
-/* line 126, ../sass/base/_typography.scss */
+/* line 132, ../sass/base/_typography.scss */
 footer,
 .l-footer {
   padding: 1.5em 0;
@@ -329,7 +348,7 @@ footer,
   color: #595959;
   font-size: 12px;
   font-size: 0.85714rem; }
-  /* line 137, ../sass/base/_typography.scss */
+  /* line 143, ../sass/base/_typography.scss */
   footer a,
   .l-footer a {
     color: #595959; }
@@ -337,7 +356,7 @@ footer,
 /**
  * $BARS
  */
-/* line 145, ../sass/base/_typography.scss */
+/* line 151, ../sass/base/_typography.scss */
 .l-bar {
   padding: 0.1em 1em;
   background: #000000;
@@ -345,42 +364,42 @@ footer,
   color: black;
   font-size: 12px;
   font-size: 0.85714rem; }
-  /* line 154, ../sass/base/_typography.scss */
+  /* line 160, ../sass/base/_typography.scss */
   .l-bar a {
     color: gray; }
-    /* line 156, ../sass/base/_typography.scss */
+    /* line 162, ../sass/base/_typography.scss */
     .l-bar a:hover {
       color: #cccccc; }
 
 /**
  * $USERFUL LINKS
  */
-/* line 165, ../sass/base/_typography.scss */
+/* line 171, ../sass/base/_typography.scss */
 .l-useful-link {
   text-align: center;
   font-size: 12px;
   font-size: 0.85714rem;
   color: gray; }
-  /* line 170, ../sass/base/_typography.scss */
+  /* line 176, ../sass/base/_typography.scss */
   .l-useful-link a {
     color: gray; }
-    /* line 172, ../sass/base/_typography.scss */
+    /* line 178, ../sass/base/_typography.scss */
     .l-useful-link a:visited {
       color: gray; }
-    /* line 175, ../sass/base/_typography.scss */
+    /* line 181, ../sass/base/_typography.scss */
     .l-useful-link a:hover {
       color: #cccccc; }
 
 /**
  * $COPYRIGHT
  */
-/* line 184, ../sass/base/_typography.scss */
+/* line 190, ../sass/base/_typography.scss */
 .l-copyright {
   text-align: center;
   font-size: 12px;
   font-size: 0.85714rem;
   color: #595959; }
-  /* line 189, ../sass/base/_typography.scss */
+  /* line 195, ../sass/base/_typography.scss */
   .l-copyright a {
     color: #595959; }
 
@@ -396,10 +415,7 @@ and open the template in the editor.
 /* line 11, ../sass/components/blocks/_block-list.scss */
 .l-region--stacked-first .block {
   padding: 1.5em 0; }
-  /* line 14, ../sass/components/blocks/_block-list.scss */
-  .l-region--stacked-first .block a {
-    color: #333333; }
-  /* line 19, ../sass/components/blocks/_block-list.scss */
+  /* line 15, ../sass/components/blocks/_block-list.scss */
   .l-region--stacked-first .block .block__content .field__item {
     display: inline-block;
     vertical-align: middle;
@@ -408,10 +424,10 @@ and open the template in the editor.
     *display: inline;
     padding: .4em .5em .4em 0;
     width: 10.5em; }
-  /* line 26, ../sass/components/blocks/_block-list.scss */
+  /* line 22, ../sass/components/blocks/_block-list.scss */
   .l-region--stacked-first .block ul.menu {
     padding-left: 0; }
-    /* line 28, ../sass/components/blocks/_block-list.scss */
+    /* line 24, ../sass/components/blocks/_block-list.scss */
     .l-region--stacked-first .block ul.menu li {
       display: inline-block;
       vertical-align: middle;
@@ -421,13 +437,10 @@ and open the template in the editor.
       padding: .4em .5em .4em 0;
       width: 10.5em; }
 
-/* line 38, ../sass/components/blocks/_block-list.scss */
+/* line 34, ../sass/components/blocks/_block-list.scss */
 .l-region--stacked-second .block {
   padding: 1.5em 0; }
-  /* line 41, ../sass/components/blocks/_block-list.scss */
-  .l-region--stacked-second .block a {
-    color: #333333; }
-  /* line 46, ../sass/components/blocks/_block-list.scss */
+  /* line 38, ../sass/components/blocks/_block-list.scss */
   .l-region--stacked-second .block .block__content .field__item {
     display: inline-block;
     vertical-align: middle;
@@ -565,12 +578,12 @@ and open the template in the editor.
     .breadcrumb li:last-child:after {
       content: ""; }
 
-/* line 1, ../sass/components/menus/_navigation.scss */
+/* line 1, ../sass/components/menus/_menu.scss */
 .tb-megamenu .nav-collapse .nav li.dropdown > .dropdown-toggle .caret, .tb-megamenu .nav-collapse .nav li.dropdown > .dropdown-toggle:hover .caret, .tb-megamenu .nav-collapse .nav li.dropdown.open > .dropdown-toggle .caret, .tb-megamenu .nav-collapse .nav li.dropdown.open > .dropdown-toggle:hover .caret {
   border-top-color: #333333;
   border-bottom-color: #333333; }
 
-/* line 6, ../sass/components/menus/_navigation.scss */
+/* line 6, ../sass/components/menus/_menu.scss */
 .tb-megamenu .nav-collapse .nav > li > a, .tb-megamenu .nav-collapse .nav li.dropdown.active > .dropdown-toggle, .tb-megamenu .nav-collapse .nav li.dropdown.open > .dropdown-toggle, .tb-megamenu .nav-collapse .nav li.dropdown.open.active > .dropdown-toggle,
 .tb-megamenu .nav-collapse .nav li.dropdown.open.active > a:hover,
 .tb-megamenu .nav-collapse .nav li.dropdown.open.active > a:focus {
@@ -578,7 +591,7 @@ and open the template in the editor.
   border: 0;
   color: #333333; }
 
-/* line 12, ../sass/components/menus/_navigation.scss */
+/* line 12, ../sass/components/menus/_menu.scss */
 .tb-megamenu .dropdown-menu {
   background-color: #f5f4f1;
   border-bottom: 0.3em solid #e87411;
@@ -592,28 +605,28 @@ and open the template in the editor.
   -webkit-box-shadow: 0 5px 10px #646464;
   box-shadow: 0 5px 10px #646464; }
 
-/* line 19, ../sass/components/menus/_navigation.scss */
+/* line 19, ../sass/components/menus/_menu.scss */
 .tb-megamenu {
   background-color: #f5f4f1;
   border-bottom: 1px solid #e8e6df; }
-  /* line 25, ../sass/components/menus/_navigation.scss */
+  /* line 25, ../sass/components/menus/_menu.scss */
   .tb-megamenu .nav-collapse .nav > li {
     padding-bottom: 0; }
-    /* line 27, ../sass/components/menus/_navigation.scss */
+    /* line 27, ../sass/components/menus/_menu.scss */
     .tb-megamenu .nav-collapse .nav > li > a {
       font-size: 16px;
       font-size: 1.14286rem; }
-      /* line 31, ../sass/components/menus/_navigation.scss */
+      /* line 31, ../sass/components/menus/_menu.scss */
       .tb-megamenu .nav-collapse .nav > li > a:hover, .tb-megamenu .nav-collapse .nav > li > a:focus {
         color: #e87411; }
-    /* line 38, ../sass/components/menus/_navigation.scss */
+    /* line 38, ../sass/components/menus/_menu.scss */
     .tb-megamenu .nav-collapse .nav > li.active > a:hover, .tb-megamenu .nav-collapse .nav > li.active > a:focus {
       background-color: #e8e6df;
       color: #e87411; }
-  /* line 64, ../sass/components/menus/_navigation.scss */
+  /* line 64, ../sass/components/menus/_menu.scss */
   .tb-megamenu .nav-collapse .nav li.dropdown.open > .dropdown-toggle {
     color: #e87411; }
-  /* line 87, ../sass/components/menus/_navigation.scss */
+  /* line 87, ../sass/components/menus/_menu.scss */
   .tb-megamenu .nav-collapse .nav .active > a, .tb-megamenu .nav-collapse .nav .active > a:hover, .tb-megamenu .nav-collapse .nav .active > a:focus {
     color: #e87411;
     text-shadow: none;
@@ -623,22 +636,79 @@ and open the template in the editor.
     -moz-box-shadow: none;
     box-shadow: none;
     outline: none; }
-  /* line 108, ../sass/components/menus/_navigation.scss */
-  .tb-megamenu .dropdown-menu li > a:hover, .tb-megamenu .dropdown-menu li > a:focus {
-    color: #e87411; }
-  /* line 117, ../sass/components/menus/_navigation.scss */
+  /* line 107, ../sass/components/menus/_menu.scss */
+  .tb-megamenu .dropdown-menu li > a {
+    display: inline-block; }
+    /* line 110, ../sass/components/menus/_menu.scss */
+    .tb-megamenu .dropdown-menu li > a:hover, .tb-megamenu .dropdown-menu li > a:focus {
+      color: #e87411; }
+  /* line 119, ../sass/components/menus/_menu.scss */
   .tb-megamenu .dropdown-submenu:hover > a {
     color: #e87411; }
 
-/* line 126, ../sass/components/menus/_navigation.scss */
-.tb-megamenu-submenu nav ul.menu li {
+/* line 127, ../sass/components/menus/_menu.scss */
+.tb-megamenu-submenu ul li {
   padding: 0.1em 0.5em; }
-  /* line 128, ../sass/components/menus/_navigation.scss */
-  .tb-megamenu-submenu nav ul.menu li:before {
+  /* line 130, ../sass/components/menus/_menu.scss */
+  .tb-megamenu-submenu ul li:before {
     font-family: "FontAwesome";
     content: "\f101";
-    padding-right: 0.5em;
-    color: #e87411; }
+    margin-right: 0.5em;
+    color: #e87411;
+    display: inline-block;
+    vertical-align: middle;
+    *vertical-align: auto;
+    *zoom: 1;
+    *display: inline; }
+
+/*
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+*/
+/* 
+    Created on : May 3, 2015, 4:04:14 PM
+    Author     : Stephen
+*/
+/* line 11, ../sass/components/menus/_navigation.scss */
+.l-region--sidebar-first .block--menu-block {
+  border: 1px solid #cccccc;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px; }
+  /* line 15, ../sass/components/menus/_navigation.scss */
+  .l-region--sidebar-first .block--menu-block .block__title {
+    border-top: 3px solid #e87411;
+    border-bottom: 1px solid #cccccc;
+    color: #333333;
+    text-align: center;
+    height: 3em;
+    line-height: 3em; }
+  /* line 24, ../sass/components/menus/_navigation.scss */
+  .l-region--sidebar-first .block--menu-block ul.menu {
+    padding: 0;
+    margin: 0; }
+    /* line 28, ../sass/components/menus/_navigation.scss */
+    .l-region--sidebar-first .block--menu-block ul.menu li {
+      list-style-image: none;
+      list-style-type: none;
+      margin-left: 0;
+      border-bottom: 1px dotted #333333;
+      text-align: center;
+      cursor: pointer; }
+      /* line 35, ../sass/components/menus/_navigation.scss */
+      .l-region--sidebar-first .block--menu-block ul.menu li.active, .l-region--sidebar-first .block--menu-block ul.menu li.active:hover {
+        background: #e87411; }
+      /* line 40, ../sass/components/menus/_navigation.scss */
+      .l-region--sidebar-first .block--menu-block ul.menu li:hover {
+        background: gray; }
+      /* line 45, ../sass/components/menus/_navigation.scss */
+      .l-region--sidebar-first .block--menu-block ul.menu li a.active {
+        color: #ffffff; }
+      /* line 49, ../sass/components/menus/_navigation.scss */
+      .l-region--sidebar-first .block--menu-block ul.menu li a:hover {
+        color: #ffffff;
+        text-decoration: none; }
 
 /*
 To change this license header, choose License Headers in Project Properties.
@@ -652,6 +722,24 @@ and open the template in the editor.
 /* line 10, ../sass/components/misc/_article-title.scss */
 .article-title {
   text-align: center; }
+
+/*
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+*/
+/* 
+    Created on : May 3, 2015, 11:12:37 AM
+    Author     : Stephen
+*/
+/* line 12, ../sass/components/misc/_taxonomy-term.scss */
+.view-taxonomy-term .item-list li.views-row {
+  border-bottom: 1px dotted gray; }
+  /* line 15, ../sass/components/misc/_taxonomy-term.scss */
+  .view-taxonomy-term .item-list li.views-row:before {
+    font-family: "FontAwesome";
+    content: "\f101";
+    padding-right: 0.5em; }
 
 /*
 To change this license header, choose License Headers in Project Properties.
