--- a/sites/all/themes/gxnulib/sass/components/menus/_navigation.scss
+++ b/sites/all/themes/gxnulib/sass/components/menus/_navigation.scss
@@ -1,135 +1,55 @@
-%caret {
-    border-top-color: $menu-link-color;
-    border-bottom-color: $menu-link-color;
-}
-
-%menu {
-    background-color: $menu-bgcolor;
-    border: 0;
-    color: $menu-link-color;
-}
-
-%submenu {
-    background-color: $menu-bgcolor;
-    border-bottom: .3em solid $link-color;
-    @include border-bottom-radius($radius);
-    @include box-shadow(0 5px 10px $menu-box-shadow-color);
-}
-
-.tb-megamenu {
-    background-color: $menu-bgcolor;
-    border-bottom: 1px solid $menu-border-color;
-
-    .nav-collapse {
-        .nav {
-            > li {
-                padding-bottom: 0;
-                > a {
-                    @include font-size(16px);
-                    @extend %menu;
-                    
-                    &:hover,
-                    &:focus {
-                        color: $menu-link-hover-color;
-                    }
-                }
+/*
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+*/
+/* 
+    Created on : May 3, 2015, 4:04:14 PM
+    Author     : Stephen
+*/
+.l-region--sidebar-first {
+    .block--menu-block {
+        border: 1px solid lighten($font-color, 60%);
+        @include border-radius($radius);
+        
+        .block__title {
+            border-top: 3px solid $link-color;
+            border-bottom: 1px solid lighten($font-color, 60%);
+            color: $font-color;
+            text-align: center;
+            height: 3em;
+            line-height: 3em;
+        }
+        
+        ul.menu {
+            padding: 0;
+            margin: 0;
+            
+            li {
+                @include no-bullet;
+                border-bottom: 1px dotted $font-color;
+                text-align: center;
+                cursor: pointer;
+                
                 &.active {
-                    > a {
-                        &:hover,
-                        &:focus {
-                            background-color: $menu-link-hover-bgcolor;
-                            color: $menu-link-hover-color;
-                        }
-                    }
-                }
-            }
-
-            li.dropdown {
-                > .dropdown-toggle {
                     &,
                     &:hover {
-                        .caret {
-                            @extend %caret;
-                        }
+                        background: $link-color;
                     }
                 }
-
-                &.active {
-                    > .dropdown-toggle {
-                        @extend %menu;
-                    }
+                &:hover {
+                    background: lighten($font-color, 30%);
                 }
-
-                &.open {
-                    > .dropdown-toggle {
-                        @extend %menu;
-                        color: $menu-link-hover-color;
-
-                        &,
-                        &:hover {
-                            .caret {
-                                @extend %caret;
-                            }
-                        }
-                    }
-
+                
+                a {
                     &.active {
-                        > .dropdown-toggle,
-                        > a:hover,
-                        > a:focus {
-                            @extend %menu;
-                        }
+                        color: $white;
                     }
-                }
-            }
-
-            .active > a {
-                &,
-                &:hover,
-                &:focus {
-                    color: $link-color;
-                    text-shadow: none;
-                    background-color: $menu-link-bgcolor;
-                    background-image: none;
-                    -webkit-box-shadow: none;
-                    -moz-box-shadow: none;
-                    box-shadow: none;
-                    outline: none;
-                }
-            }
-        }
-    }
-  
-    .dropdown-menu {
-        @extend %submenu;
-
-        li {
-            > a {
-                &:hover,
-                &:focus {
-                    color: $link-color;
-                }
-            }
-        }
-    }
-    
-    .dropdown-submenu:hover {
-        > a {
-            color: $link-color;
-        }
-    }
-}
-
-.tb-megamenu-submenu {
-    nav {
-        ul.menu {
-            li {
-                padding: .1em $spacing;
-                &:before {
-                    font-family: "FontAwesome";
-                    content: "\f101";
-                    padding-right: $spacing;
-                    color: $link-color;
+                    
+                    &:hover {
+                        color: $white;
+                        text-decoration: none;
+                    }
                 }
             }
         }
