--- a/sites/all/themes/gxnulib/sass/components/menus/_navigation.scss
+++ b/sites/all/themes/gxnulib/sass/components/menus/_navigation.scss
@@ -50,7 +50,7 @@ and open the template in the editor.
                 }
                 
                 a {
-                    display: inline-block;
+                    @include inline-block;
                     color: $font-color;
                     
                     &.active {
